<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">WebView Browser</string>
    <string name="action_back">Back</string>
    <string name="action_forward">Forward</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_stop">Stop</string>
    <string name="action_history">History</string>
    <string name="action_credentials">Credentials</string>
    <string name="action_variables">Variables</string>
    <string name="action_dev_tools">Developer Tools</string>
    <string name="action_copy_all">Copy All Content</string>
    <string name="action_menu">Menu</string>
    <string name="action_share">Share</string>
    <string name="action_settings">Settings</string>
    <string name="action_view_source">View Source</string>
    <string name="action_console">View Console Logs</string>
    <string name="action_clear_history">Clear history</string>
    <string name="action_favorite">Favorite</string>
    <string name="action_favorites">Favorites</string>
    <string name="enter_url_hint">Enter URL</string>
    
    <string name="history_title">Browsing History</string>
    <string name="variables_title">Form Variables</string>
    <string name="credentials_title">Credentials</string>
    <string name="favorites_title">Favorite Sites</string>
    <string name="source_code_title">HTML Source</string>
    
    <string name="empty_history">No browsing history</string>
    <string name="empty_favorites">No favorite sites</string>
    <string name="search_hint">Search history</string>
    <string name="dev_tools_visible">Developer Tools</string>
    
    <string name="added_to_favorites">Added to favorites</string>
    <string name="removed_from_favorites">Removed from favorites</string>
    
    <string name="confirm_clear_history">Are you sure you want to clear all browsing history?</string>
    <string name="confirm_clear_favorites">Are you sure you want to clear all favorites?</string>
    
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="domain_hint">Domain</string>
    <string name="variable_name_hint">Variable name</string>
    <string name="variable_value_hint">Variable value</string>
    <string name="add_variable">Add variable</string>
    <string name="save_credentials">Save Credentials</string>
    <string name="clear_credentials">Clear Credentials</string>
    <string name="credentials_saved">Credentials saved successfully</string>
    <string name="credentials_deleted">Credentials deleted successfully</string>
    <string name="credentials_error">Error managing credentials</string>
    <string name="loading">Loading...</string>
    <string name="open">Open</string>
    <string name="copy_url">Copy URL</string>
    <string name="save_image">Save Image</string>
    <string name="stop">Stop</string>
</resources>
